Feature: Use argument files (#70)