@@ -3,6 +3,8 @@ set -euxo pipefail
 
 echo "Building cryptomator cli..."
 
+export APP_VERSION='0.1.0-local'
+
 # Check if Maven is installed
 if ! command -v mvn &> /dev/null; then
     echo "Maven is not installed. Please install Maven to proceed."
@@ -29,23 +31,15 @@ cp ./LICENSE.txt ./target/
 mv ./target/cryptomator-cli-*.jar ./target/mods
 
 echo "Creating JRE with jlink..."
-"$JAVA_HOME/bin/jlink" \
-    --verbose \
-    --output target/runtime \
-    --module-path "${JAVA_HOME}/jmods" \
-    --add-modules java.base,java.compiler,java.naming,java.xml \
-    --strip-native-commands \
-    --no-header-files \
-    --no-man-pages \
-    --strip-debug \
-    --compress zip-0
+envsubst < dist/jlink.args > target/jlink.args
+"$JAVA_HOME/bin/jlink" '@./target/jlink.args'
 
 if [ $? -ne 0 ] || [ ! -d ./target/runtime ]; then
     echo "JRE creation with jlink failed."
     exit 1
 fi
 
-NATIVE_ACCESS_PACKAGE="no.native.access.available"
+export NATIVE_ACCESS_PACKAGE="no.native.access.available"
 _OS=$(uname -s)
 if (echo "$_OS" | grep -q "Linux.*") ; then
     _ARCH=$(uname -m)
@@ -59,25 +53,11 @@ if (echo "$_OS" | grep -q "Linux.*") ; then
     fi
 fi
 
+export JP_APP_VERSION='99.9.9'
+envsubst < dist/jpackage.args > target/jpackage.args
+
 echo "Creating app binary with jpackage..."
-"$JAVA_HOME/bin/jpackage" \
-    --verbose \
-    --type app-image \
-    --runtime-image target/runtime \
-    --input target/libs \
-    --module-path target/mods \
-    --module org.cryptomator.cli/org.cryptomator.cli.CryptomatorCli \
-    --dest target \
-    --name cryptomator-cli \
-    --vendor "Skymatic GmbH" \
-    --copyright "(C) 2016 - 2024 Skymatic GmbH" \
-    --app-version "0.0.1.0" \
-    --java-options "-Dorg.cryptomator.cli.version=0.0.1-local" \
-    --java-options "--enable-preview" \
-    --java-options "--enable-native-access=${NATIVE_ACCESS_PACKAGE}" \
-    --java-options "-Xss5m" \
-    --java-options "-Xmx256m" \
-    --java-options "-Dfile.encoding=utf-8" \
+"$JAVA_HOME/bin/jpackage" '@./target/jpackage.args'
 
 if [ $? -ne 0 ] || [ ! -d ./target/cryptomator-cli ]; then
     echo "Binary creation with jpackage failed."
