@@ -1,5 +1,7 @@
 "Building cryptomator cli..."
 
+$appVersion='0.1.0-local'
+
 # Check if maven is installed
 $commands = 'mvn'
 foreach ($cmd in $commands) {
@@ -14,7 +16,7 @@ if(-not $env:JAVA_HOME) {
 # Check Java version
 $minJavaVersion=$(mvn help:evaluate "-Dexpression=jdk.version" -q -DforceStdout)
 $javaVersion = $(& "$env:JAVA_HOME\bin\java" --version) -split ' ' | Select-Object -Index 1
-if( ($javaVersion -split '.' | Select-Object -First 1) -ne "22") {
+if( ($javaVersion.Split('.') | Select-Object -First 1) -ne "22") {
     throw "Java version $javaVersion is too old. Minimum required version is $minJavaVersion"
 }
 
@@ -24,43 +26,25 @@ Copy-Item ./LICENSE.txt -Destination ./target -ErrorAction Stop
 Move-Item ./target/cryptomator-cli-*.jar ./target/mods -ErrorAction Stop
 
 Write-Host "Creating JRE with jlink..."
-& $env:JAVA_HOME/bin/jlink `
---verbose `
---output target/runtime `
---module-path "${env:JAVA_HOME}/jmods" `
---add-modules java.base,java.compiler,java.naming,java.xml `
---strip-native-commands `
---no-header-files `
---no-man-pages `
---strip-debug `
---compress zip-0
+Get-Content -Path './dist/jlink.args' | ForEach-Object { $_.Replace('${JAVA_HOME}', "$env:JAVA_HOME")} | Out-File -FilePath './target/jlink.args'
+& $env:JAVA_HOME/bin/jlink `@./target/jlink.args
 
 if ( ($LASTEXITCODE -ne 0) -or (-not (Test-Path ./target/runtime))) {
-   throw "JRE creation with jLink failed with exit code $LASTEXITCODE."
+    throw "JRE creation with jLink failed with exit code $LASTEXITCODE."
 }
+
+## powershell does not have envsubst
+$jpAppVersion='99.9.9'
+Get-Content -Path './dist/jpackage.args' | ForEach-Object {
+    $_.Replace('${APP_VERSION}', $appVersion).
+        Replace('${JP_APP_VERSION}', $jpAppVersion).
+        Replace('${NATIVE_ACCESS_PACKAGE}', 'org.cryptomator.jfuse.win')
+} | Out-File -FilePath './target/jpackage.args'
 
 # jpackage
 # app-version is hard coded, since the script is only for local test builds
 Write-Host "Creating app binary with jpackage..."
-& $env:JAVA_HOME/bin/jpackage `
-    --verbose `
-    --type app-image `
-    --runtime-image target/runtime `
-    --input target/libs `
-    --module-path target/mods `
-    --module org.cryptomator.cli/org.cryptomator.cli.CryptomatorCli `
-    --dest target `
-    --name cryptomator-cli `
-    --vendor "Skymatic GmbH" `
-    --copyright "(C) 2016 - 2024 Skymatic GmbH" `
-    --app-version "0.0.1.0" `
-    --java-options "-Dorg.cryptomator.cli.version=0.0.1-local" `
-    --java-options "--enable-preview" `
-    --java-options "--enable-native-access=org.cryptomator.jfuse.win" `
-    --java-options "-Xss5m" `
-    --java-options "-Xmx256m" `
-    --java-options '-Dfile.encoding="utf-8"' `
-    --win-console
+& $env:JAVA_HOME/bin/jpackage `@./target/jpackage.args --win-console
 
 if ( ($LASTEXITCODE -ne 0) -or (-not (Test-Path ./target/cryptomator-cli))) {
     throw "Binary creation with jpackage failed with exit code $LASTEXITCODE."
